[package]
name = "ao3dl"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
clap = { version = "4.5.39", features = ["derive"] }
quick-xml = "0.37.5"
reqwest = { version = "0.12.19", features = ["cookies", "json", "multipart"] }
rpassword = "7.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
zip = "4.0.0"
