[package]
name = "ao3dl"
version = "1.0.4"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
clap = { version = "4.5.39", features = ["derive"] }
env_logger = "0.11.8"
kdam = "0.6.3"
log = "0.4.27"
pretty_env_logger = "0.5.0"
quick-xml = "0.37.5"
regex = "1.11.1"
reqwest = { version = "0.12.19", features = ["cookies", "json", "multipart"] }
rpassword = "7.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
zip = "4.0.0"
